--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -38,8 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
         android:lineSpacingExtra="-1dp"
-        android:fontFamily="@font/inter_regular"
-        android:textFontWeight="200"
+        android:fontFamily="@font/helvetica_light"
         android:gravity="center"
         android:textColor="@color/color_BEC7DC"
         android:textSize="12sp"
@@ -79,8 +78,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:lineSpacingExtra="-1dp"
-        android:fontFamily="@font/inter_regular"
-        android:textFontWeight="400"
+        android:fontFamily="@font/helvetica_light"
         android:gravity="center"
         android:textColor="@color/color_BEC7DC"
         android:textSize="12sp"
@@ -107,8 +105,9 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTime"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="19dp"
+        android:fontFamily="@font/inter_regular"
         android:gravity="center"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:text="@string/P303"/>
