--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -642,5 +642,6 @@
     <color name="color_929292">#929292</color>
     <color name="color_323232">#323232</color>
     <color name="color_21283A">#21283A</color>
+    <color name="color_1A2334">#1A2334</color>
 
 </resources>
