--- a/app/src/main/res/layout/dialog_endcard_bet_success.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet_success.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16"
+            android:includeFontPadding="false"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_FFFFFF"
             android:textStyle="bold"
@@ -44,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:lines="1"
+                    android:fontFamily="@font/helvetica_light"
                     android:text="@string/P316"
                     android:textColor="@color/color_BEC7DC"
                     android:textSize="@dimen/textSize12sp" />
@@ -88,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:lines="1"
                     android:ellipsize="end"
+                    android:fontFamily="@font/helvetica_light"
                     android:textSize="@dimen/textSize12sp"
                     android:textColor="@color/color_BEC7DC"
                     android:text="@string/P317"/>
@@ -172,6 +175,7 @@
                     android:layout_height="wrap_content"
                     android:lines="1"
                     android:ellipsize="end"
+                    android:fontFamily="@font/helvetica_light"
                     android:textSize="@dimen/textSize12sp"
                     android:textColor="@color/color_BEC7DC"
                     android:text="Bet"/>
@@ -201,6 +205,7 @@
                     android:layout_height="wrap_content"
                     android:lines="1"
                     android:ellipsize="end"
+                    android:fontFamily="@font/helvetica_light"
                     android:textSize="@dimen/textSize12sp"
                     android:textColor="@color/color_BEC7DC"
                     android:text="@string/LT042"/>
@@ -230,6 +235,7 @@
                     android:layout_height="wrap_content"
                     android:lines="1"
                     android:ellipsize="end"
+                    android:fontFamily="@font/helvetica_light"
                     android:textSize="@dimen/textSize12sp"
                     android:textColor="@color/color_BEC7DC"
                     android:text="@string/N142"/>
