--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -107,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/I041"/>
@@ -136,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/P317"/>
@@ -191,6 +193,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/I039"/>
@@ -220,6 +223,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="Bet"/>
@@ -249,6 +253,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/LT042"/>
@@ -278,6 +283,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:ellipsize="end"
+                android:fontFamily="@font/helvetica_light"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/N142"/>
@@ -304,6 +310,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_8"
             android:lineSpacingExtra="3dp"
+            android:fontFamily="@font/helvetica_light"
             android:textSize="@dimen/textSize12sp"
             android:textColor="@color/color_BEC7DC"
             android:text="@string/P322"/>
@@ -403,6 +410,7 @@
         android:gravity="center"
         android:lines="1"
         android:ellipsize="end"
+        android:fontFamily="@font/helvetica_light"
         android:textSize="@dimen/textSize12sp"
         android:textColor="@color/color_BEC7DC"
         android:text="@string/N664"
