UI走查问题修复

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -385,6 +385,7 @@
     <color name="color_66E0E3EE">#66E0E3EE</color>
     <color name="color_4DE3ECF5">#4DE3ECF5</color>
     <color name="color_99F1F5F9">#99F1F5F9</color>
+    <color name="color_333A4C">#333A4C</color>
 
 
     <color name="color_31D089">#31D089</color>
