--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_1A202E"
         android:orientation="vertical"
         android:paddingTop="1dp">
 
@@ -272,6 +272,7 @@
             android:id="@+id/rcvOddsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/color_1A202E"
             android:paddingVertical="12dp"
             android:paddingHorizontal="8dp"
             android:clipToPadding="false"/>
