--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -10,15 +10,14 @@
     android:background="@color/color_1A202E">
     
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.5dp"
         android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="243dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/color_6D7693"
-        android:alpha="0.5"/>
+        android:background="@color/color_333A4C" />
 
     <ImageView
         android:id="@+id/ivHomeLogo"
@@ -103,7 +102,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTime"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="19dp"
-        android:fontFamily="@font/inter_regular"
+        android:fontFamily="@font/helvetica_normal"
         android:gravity="center"
         android:textSize="14sp"
         android:textColor="@color/white"
