--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,10 @@
         <item name="android:taskCloseExitAnimation">@anim/pop_left_to_right_exit</item>
     </style>
 
+    <style name="darkStyle" parent="AppTheme">
+        <item name="android:statusBarColor">@color/color_1B2436</item>
+    </style>
+
 
     <!--＊＊設定layout_gravity會導致NestedScrollView內的RecyclerView item移位-->
 
