增加kyc拒绝页面

--- a/app/src/main/res/navigation/identity_navigation.xml
+++ b/app/src/main/res/navigation/identity_navigation.xml
@@ -67,5 +67,18 @@
             app:popExitAnim="@anim/exit_to_right" />
 
     </fragment>
+    <fragment
+        android:id="@+id/verifyRejectFragment"
+        android:name="org.cxct.sportlottery.ui.profileCenter.identity.VerifyRejectFragment"
+        android:label="VerifyRejectFragment"
+        tools:layout="@layout/fragment_verify_reject">
+
+        <action
+            android:id="@+id/action_reverifyKYCFragment_to_verifyRejectFragment"
+            app:destination="@id/verifyStatusFragment"
+            app:enterAnim="@anim/enter_from_right"
+            app:popExitAnim="@anim/exit_to_right" />
+
+    </fragment>
 
 </navigation>
