kyc显示状态和颜色优化

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -645,5 +645,7 @@
     <color name="color_21283A">#21283A</color>
     <color name="color_1A2334">#1A2334</color>
     <color name="color_283042">#283042</color>
+    <color name="color_A5B2D0">#A5B2D0</color>
+    <color name="color_FFA800">#FFA800</color>
 
 </resources>
