修复autoSizeMaxTextSize三星手机兼容性问题

--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -44,8 +44,8 @@
         android:textColor="@color/color_FFFFFF_FFFFFF"
         android:textSize="@dimen/textSize14sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="12sp"
-        app:autoSizeMinTextSize="8sp"
+        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+        app:autoSizeMinTextSize="@dimen/textSize8sp"
         app:autoSizeStepGranularity="1dp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
