--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -537,8 +537,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:autoSizeMaxTextSize="13dp"
-                    android:autoSizeMinTextSize="6dp"
+                    android:autoSizeMaxTextSize="@dimen/textSize13sp"
+                    android:autoSizeMinTextSize="@dimen/textSize6sp"
                     android:autoSizeTextType="uniform"
                     android:gravity="center_vertical"
                     android:maxLines="1"
@@ -676,8 +676,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
-                    android:autoSizeMaxTextSize="13dp"
-                    android:autoSizeMinTextSize="6dp"
+                    android:autoSizeMaxTextSize="@dimen/textSize13sp"
+                    android:autoSizeMinTextSize="@dimen/textSize6sp"
                     android:autoSizeTextType="uniform"
                     android:gravity="center_vertical"
                     android:maxLines="1"
