--- a/app/src/main/res/layout/item_money_transfer.xml
+++ b/app/src/main/res/layout/item_money_transfer.xml
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            app:autoSizeMaxTextSize="16dp"
-            app:autoSizeMinTextSize="2dp"
+            app:autoSizeMaxTextSize="@dimen/textSize16sp"
+            app:autoSizeMinTextSize="@dimen/textSize12sp"
             app:autoSizeTextType="uniform"
             android:textColor="@color/color_535D76"
             android:textSize="@dimen/textSize14sp"
