--- a/app/src/main/res/layout/view_oksport_new.xml
+++ b/app/src/main/res/layout/view_oksport_new.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="100dp"
     android:foreground="@drawable/fg_ripple"
     android:layout_marginBottom="@dimen/margin_20">
 
    <ImageView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_oksports_new"/>
     <LinearLayout
