--- a/app/src/main/res/layout/item_promotion_list.xml
+++ b/app/src/main/res/layout/item_promotion_list.xml
@@ -1,44 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/margin_12"
-    android:layout_marginBottom="@dimen/margin_10"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/margin_8"
-    app:cardBackgroundColor="@color/color_FFFFFF">
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginTop="12dp"
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@color/color_FFFFFF"
+    app:cardElevation="0dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/ivImage"
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="120dp"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"/>
+            app:cardElevation="0dp"
+            app:cardCornerRadius="8dp">
+
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="120dp"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"/>
+
+        </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:paddingHorizontal="@dimen/margin_10"
-            android:paddingVertical="@dimen/margin_5">
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="5dp">
+
             <TextView
                 android:id="@+id/tvContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginRight="10dp"
                 android:singleLine="true"
                 android:ellipsize="end"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_14366B"/>
+
             <TextView
                 android:id="@+id/tvDetail"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/margin_24"
-                android:paddingHorizontal="@dimen/margin_8"
+                android:layout_height="24dp"
+                android:paddingHorizontal="8dp"
                 android:gravity="center"
                 android:singleLine="true"
                 android:ellipsize="end"
@@ -46,6 +60,7 @@
                 android:textSize="@dimen/textSize12sp"
                 android:textColor="@color/color_025BE8"
                 android:text="@string/D045"/>
+
         </LinearLayout>
     </LinearLayout>
 
