--- a/app/src/main/res/layout/activity_modify_profile_info.xml
+++ b/app/src/main/res/layout/activity_modify_profile_info.xml
@@ -272,6 +272,7 @@
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:maxLength="20"
                         android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
