--- a/app/src/main/res/layout/activity_promotion_detail.xml
+++ b/app/src/main/res/layout/activity_promotion_detail.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/ivBanner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scaleType="matrix"
                 android:adjustViewBounds="true" />
 
             <TextView
