--- a/app/src/main/res/layout/activity_login_ok.xml
+++ b/app/src/main/res/layout/activity_login_ok.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
                 android:paddingHorizontal="@dimen/margin_12"
-                android:paddingBottom="@dimen/margin_20"
+                android:paddingBottom="@dimen/margin_4"
                 android:background="@drawable/bg_white_radius_8"
                 android:elevation="2dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -257,7 +257,7 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="46dp"
-                    android:layout_marginTop="@dimen/margin_20"
+                    android:layout_marginTop="@dimen/margin_15"
                     android:background="@drawable/bg_blue_radius_8"
                     android:text="@string/btn_login"
                     android:textAllCaps="false"
@@ -377,72 +377,184 @@
                 </LinearLayout>
 
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="174dp"
                 android:orientation="vertical"
-                android:paddingHorizontal="@dimen/margin_10"
-                android:paddingBottom="12dp"
                 android:layout_marginHorizontal="15dp"
                 android:background="@drawable/bg_white_radius_16_stoke_blue"
                 app:layout_constraintTop_toBottomOf="@id/lin_third">
-
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="9dp">
-
-                    <ImageView
-                        android:id="@+id/ivPrivacy"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_marginTop="2dp"
-                        android:src="@drawable/ic_radiobtn_1_sel"/>
-
-                    <TextView
-                        android:id="@+id/tvPrivacy"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+                    <androidx.core.widget.NestedScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="5dp"
-                        android:gravity="start"
-                        android:textColor="@color/color_6D7693"
-                        android:textColorLink="@color/color_025BE8"
-                        android:textSize="@dimen/textSize12sp"
-                        android:lineSpacingExtra="3dp"
-                        android:text="@string/login_privacy" />
-                </LinearLayout>
-
+                        android:scrollbars="vertical"
+                        android:fadeScrollbars="false"
+                        android:scrollbarThumbVertical="@drawable/bg_scroll_vertical_thumb"
+                        android:layout_marginHorizontal="@dimen/margin_4"
+                        android:paddingTop="@dimen/margin_12">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/margin_6"
+                            android:orientation="vertical"
+                            android:scrollbars="vertical">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="1. "/>
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:id="@+id/tvPrivacyLine1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="@string/P341"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="2. "/>
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:id="@+id/tvPrivacyLine2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="@string/P342"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="2. "/>
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="@string/P343"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="4. "/>
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="@string/P344"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="5. "/>
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:lineHeight="@dimen/margin_16"
+                                    android:textColor="@color/color_6D7693"
+                                    android:textSize="@dimen/textSize12sp"
+                                    android:text="@string/P345"/>
+                            </LinearLayout>
+                        </LinearLayout>
+                    </androidx.core.widget.NestedScrollView>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:src="@drawable/bg_privacy_shadow"
+                        android:adjustViewBounds="true"/>
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="8dp">
+                    android:orientation="vertical"
+                    android:layout_margin="@dimen/margin_1"
+                    android:paddingHorizontal="@dimen/margin_10"
+                    android:paddingVertical="@dimen/margin_8"
+                    android:background="@drawable/bg_white_radius_16_bottom">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <androidx.appcompat.widget.AppCompatCheckBox
+                        android:id="@+id/cbPrivacy"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="left"
-                        android:textColor="@color/color_6D7693"
-                        android:textColorLink="@color/color_025BE8"
+                        android:gravity="center_vertical"
+                        android:button="@drawable/selector_login_checked"
+                        android:paddingLeft="@dimen/margin_5"
+                        android:lineHeight="@dimen/margin_16"
+                        android:textColor="@color/color_0D2245"
                         android:textSize="@dimen/textSize12sp"
-                        android:lineSpacingExtra="3dp"
-                        android:text="@string/need_help" />
+                        android:text="@string/P346"/>
 
-                    <TextView
-                        android:id="@+id/tv_customer_service"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:drawablePadding="3dp"
-                        android:gravity="left"
-                        android:drawableLeft="@drawable/ic_customer_service"
-                        android:textColor="@color/color_025BE8"
-                        android:textSize="@dimen/textSize12sp"
-                        android:text="@string/live_service" />
+                        android:gravity="center_horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:textColor="@color/color_535D76"
+                            android:textColorLink="@color/color_025BE8"
+                            android:textSize="@dimen/textSize12sp"
+                            android:lineSpacingExtra="3dp"
+                            android:text="@string/need_help" />
+
+                        <TextView
+                            android:id="@+id/tv_customer_service"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:drawablePadding="3dp"
+                            android:gravity="left"
+                            android:drawableLeft="@drawable/ic_customer_service"
+                            android:textColor="@color/color_025BE8"
+                            android:textSize="@dimen/textSize12sp"
+                            android:text="@string/live_service" />
+                    </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
 
 
@@ -455,7 +567,7 @@
         layout="@layout/bottom_register_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_48"
+        android:layout_marginTop="@dimen/margin_8"
         android:layout_marginBottom="@dimen/margin_20"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
