--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -386,6 +386,7 @@
     <color name="color_4DE3ECF5">#4DE3ECF5</color>
     <color name="color_99F1F5F9">#99F1F5F9</color>
     <color name="color_333A4C">#333A4C</color>
+    <color name="color_FFE6B3">#FFE6B3</color>
 
 
     <color name="color_31D089">#31D089</color>
