--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -645,5 +645,8 @@
     <color name="color_21283A">#21283A</color>
     <color name="color_1A2334">#1A2334</color>
     <color name="color_283042">#283042</color>
+    <color name="color_D48C1A">#D48C1A</color>
+    <color name="color_A78031">#A78031</color>
+    <color name="color_FFB828">#FFB828</color>
 
 </resources>
