--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -649,5 +649,6 @@
     <color name="color_D48C1A">#D48C1A</color>
     <color name="color_A78031">#A78031</color>
     <color name="color_FFB828">#FFB828</color>
+    <color name="color_FF7676">#FF7676</color>
 
 </resources>
