--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -153,31 +153,36 @@
                             tools:text="unverfied" />
                     </LinearLayout>
 
-
-                    <TextView
-                        android:id="@+id/label_user_name"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/linName"
                         android:layout_marginStart="16dp"
-                        android:layout_toEndOf="@+id/rl_head"
-                        android:text="@string/username"
-                        android:textColor="@color/color_7F7F7F_999999"
-                        android:textSize="@dimen/textSize12sp" />
+                        android:layout_toEndOf="@+id/rl_head">
+                        <ImageView
+                            android:id="@+id/ivVipLevel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/margin_20"
+                            android:layout_marginRight="@dimen/margin_5"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/ic_vip_lv_tag0" />
+                        <TextView
+                            android:id="@+id/label_user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/username"
+                            android:textColor="@color/color_7F7F7F_999999"
+                            android:textSize="@dimen/textSize12sp" />
 
-                    <TextView
-                        android:id="@+id/tv_user_username"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/linName"
-                        android:layout_marginEnd="20dp"
-                        android:layout_toEndOf="@+id/label_user_name"
-                        android:textColor="@color/color_6C7BA8_A7B2C4"
-                        android:textSize="@dimen/textSize12sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/label_user_name"
-                        app:layout_constraintTop_toTopOf="@id/label_user_name"
-                        tools:text="48745884554" />
+                        <TextView
+                            android:id="@+id/tv_user_username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:textColor="@color/color_6C7BA8_A7B2C4"
+                            android:textSize="@dimen/textSize12sp"
+                            tools:text="48745884554" />
+                    </LinearLayout>
 
                     <ImageView
                         android:id="@+id/iv_logout"
